--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>KlinGestion</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Logiciel de gestion" />
+    <meta name="author" content="ISSAADI Yougarithen" />
  <!-- TODO: Update og:title t TEST DU PULL o match your application name -->
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Gestion de l'usine" />
     <meta property="og:description" content="Le logiciel de gestion de stock" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" src="/public/favicon.ico" />
+    <meta property="og:image" src="/src/assets/klinkol-logo.png" />
 
   
   </head>
