Ajustements + Remove lovable

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta property="og:title" content="Gestion de l'usine" />
     <meta property="og:description" content="Le logiciel de gestion de stock" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" src="/src/assets/klinkol-logo.png" />
+    <meta property="og:image" src="" />
+<link rel="icon" type="image/png" href="/src/assets/klinkol-logo.png">
+<link rel="shortcut icon" href="/src/assets/klinkol-logo.png" />
 
   
   </head>
